[package]
name = "cross-curve-dleq"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
bigint = "4"
bit-vec = "0.6"
generic-array = "0.14"
curve25519-dalek = "2"
ecdsa_fun = { git = "https://github.com/LLFourn/secp256kfun", rev = "c402d8573ce1a9b80b636d46968f96dbd965ff78", features = ["libsecp_compat"] }
hex-literal = "0.2"
lazy_static = "1.4"
rand = "0.7"
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
proptest = "0.10"
