[package]
name = "cross-curve-dleq"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
bit-vec = "0.6"
generic-array = "0.14"
curve25519-dalek = "2"
ecdsa_fun = { git = "https://github.com/LLFourn/secp256kfun", rev = "510d48ef6a2b19805f7f5c70c598e5b03f668e7a", features = ["libsecp_compat"] }
hex-literal = "0.2"
lazy_static = "1.4"
rand = "0.7"
serde_crate = { package = "serde", version = "1.0", optional = true, default-features = false, features = ["derive"] }
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
proptest = "0.10"

[features]
serde = ["serde_crate", "ecdsa_fun/serialization", "curve25519-dalek/serde", "generic-array/serde"]
