[package]
name = "cross-curve-dleq"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
bit-vec = "0.6"
curve25519-dalek = "2"
ecdsa_fun = { git = "https://github.com/LLFourn/secp256kfun", rev = "cdfbc766045ea678a41780919d6228dd5acee3be", features = ["libsecp_compat"] }
generic-array = "0.14"
hex-literal = "0.2"
lazy_static = "1.4"
rand = "0.7"
serde_crate = { package = "serde", version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
sha2 = "0.9"
thiserror = "1"

[dev-dependencies]
proptest = "0.10"

[features]
serde = ["serde_crate", "ecdsa_fun/serialization", "curve25519-dalek/serde"]
